# fsrs-rs-nodejs

./: Cargo.toml  package.json
examples/: optimize.js  train_csv.js
src/: lib.rs  train_task.rs
