[package]
authors = ["AsukaMinato <i at asukaminato dot eu dot org>"]
edition = "2021"
name    = "fsrs-rs-nodejs"
version = "0.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono      = "0.4.38"
fsrs        = "2.0.2"
napi        = { version = "2", features = ['full'] }
napi-derive = "2"
tokio       = { version = "1.43.0", features = ["full"] }


[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
